manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: default
  labels:
    apps: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels: 
        app: todo
    spec:
      containers:
        - name: todo
          image: getting-started
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: default
  labels:
    apps: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels: 
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: default 
spec:
  selector:
    app: todo
  type: NodePort
  ports: 
    - port: 3000
      targetPort: 3000
      nodePort: 31000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    -  host: k8sdemo.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: todo-service
                 port:
                   number: 3000
---
